src/main/resources/scss/profile/components/_profile-card-note.scss
.profile-card.note {
	padding: 0;

	& > .discussion-detail,
	& > .discussion-reply {
		border: 0;
		position: relative;
		padding: 1rem 0.75rem 0 !important;
	}

	.discussion-detail {
		.note.heading {

			&:after, &:before {
				bottom: -1px;
				left: 30px;
				border: solid transparent;
				content: " ";
				height: 0;
				width: 0;
				position: absolute;
				z-index: 1;
			}

			&:after {
				border-color: rgba(255, 255, 255, 0);
				border-bottom-color: #fff;
				border-width: 8px;
				margin-left: -8px;
			}

			&:before {
				border-color: rgba(204, 204, 204, 0);
				border-bottom-color: #ccc;
				border-width: 9px;
				margin-left: -9px;
			}
		}
	}

	.note.heading {
		border: none;
		margin: 0;

		.breadcrumb {
			margin-bottom: 0.5rem;
			padding-bottom: 0.5rem;
			border: 0;
		}

		& > img {
			position: absolute;
			left: 0;
			top: 0;

			& + div {
				min-height: 3.75rem;
			}
		}


		.context {
			&.fragment {
				max-height: 10rem;
			}
			overflow: hidden;
			margin: 0 0 0 -4.75rem;
			clear: both;
		}
	}


	.discussion-reply {
		padding-top: 0;

		.note.heading {
			padding-bottom: 0;
		}

		.charms {top: 0;}
		.author-info {
			.avatar { margin: 1rem 0 0 0.25rem; }
			.title {
				padding-top: 0.5rem;
				margin: 0;
			}
		}
		.modeled-content {
			margin: {
				top: 0.5rem;
				bottom: 0.5rem;
			}
		}
	}


}

